--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# qraLm <a href='https://vcadavez.github.io/qraLm/docs/'><img src='man/figures/hex-qraLm.png' align="right" height="80" /></a>
+# qraLm <a href='https://github.com/WorldHealthOrganization/qraLm/docs/'><img src='man/figures/hex-qraLm.png' align="right" height="80" /></a>
 
 A R package to develop quantitative risk assessment for *L. monocytogenes* in Frozen Vegetables, Diced RTE Cantaloupe and Cold-smoked RTE Fish.
 
@@ -23,7 +23,7 @@ A R package to develop quantitative risk assessment for *L. monocytogenes* in Fr
 
 ## Installation
 
-- You can install `qraLm` from [GitHub: https://github.com/vcadavez/qraLm](https://github.com/vcadavez/qraLm)
+- You can install `qraLm` from [GitHub: https://github.com/WorldHealthOrganization/qraLm](https://github.com/WorldHealthOrganization/qraLm)
 using the `devtools` package, with the R code below.
 
 - You must first install the `doseresponsemodels` package from [github: https://github.com/vcadavez/doseresponsemodels](https://github.com/vcadavez/doseresponsemodels), which implements the dose-response models for Listeria monocytogenes.
@@ -38,14 +38,14 @@ using the `devtools` package, with the R code below.
 ```{r, eval=FALSE}
 
 if (!require("devtools")) install.packages("devtools")
-devtools::install_github("vcadavez/doseresponsemodels")
-devtools::install_github("vcadavez/qraLm")
+devtools::install_github("rpouillot/doseresponsemodels")
+devtools::install_github("https://github.com/WorldHealthOrganization/qraLm")
 ```
 
 ## Using qraLm
 
-You can find the vignettes at the `qraLm` website:  [https://vcadavez.github.io/qraLm/](https://vcadavez.github.io/qraLm/).
+You can find the vignettes at the `qraLm` website:  [https://github.com/WorldHealthOrganization/qraLm/](https://github.com/WorldHealthOrganization/qraLm/).
 
 ## Reporting bugs
 
-You can report bugs at: [https://github.com/vcadavez/qraLm/issues](https://github.com/vcadavez/qraLm/issues).
+You can report bugs at: [https://github.com/WorldHealthOrganization/qraLm/issues](https://github.com/WorldHealthOrganization/qraLm/issues).
