--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ The qraLm R package is designed to conduct quantitative risk assessments (QRA) s
 - You can install `qraLm` from [GitHub: https://github.com/WorldHealthOrganization/qraLm](https://github.com/WorldHealthOrganization/qraLm)
 using the `devtools` package, with the R code below.
 
-- You must first install the `doseresponsemodels` package from [github: https://github.com/vcadavez/doseresponsemodels](https://github.com/vcadavez/doseresponsemodels), which implements the dose-response models for Listeria monocytogenes.
+- You must first install the `doseresponsemodels` package from [github: https://github.com/WorldHealthOrganization/DRLm/](https://github.com/WorldHealthOrganization/DRLm/), which implements the dose-response models for Listeria monocytogenes.
 
 - For Windows users it is recommended to install
 [Rtools: https://cran.r-project.org/bin/windows/Rtools/](https://cran.r-project.org/bin/windows/Rtools/) before.
@@ -44,7 +44,7 @@ using the `devtools` package, with the R code below.
 ```{r, eval=FALSE}
 
 if (!require("devtools")) install.packages("devtools")
-devtools::install_github("rpouillot/doseresponsemodels")
+devtools::install_github("https://github.com/WorldHealthOrganization/DRLm/")
 devtools::install_github("https://github.com/WorldHealthOrganization/qraLm")
 ```
 
