--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -2,12 +2,12 @@
 output: github_document
 ---
 
-# [qraLm 0.1.2](https://vcadavez.github.io/qraLm/releases/tag/v.0.1.2) <small>2024-09-30</small>
+# [qraLm 0.1.2](https://github.com/WorldHealthOrganization/qraLm/releases/tag/v.0.1.2) <small>2024-09-30</small>
 
 - Summary functions updated
 - qraLmShiny integraded
 
-# [qraLm 0.1.1](https://vcadavez.github.io/qraLm/releases/tag/v.0.1.1) <small>2024-02-05</small>
+# [qraLm 0.1.1](https://github.com/WorldHealthOrganization/qraLm/releases/tag/v.0.1.1) <small>2024-02-05</small>
 
 - Quantitative risk assessment models
   - Frozen Vegetables
