--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -2,16 +2,12 @@
 output: github_document
 ---
 
-<<<<<<< HEAD
-# [qraLm 0.1.2](https://github.com/WorldHealthOrganization/qraLm/releases/tag/v.0.1.2) <small>2024-09-30</small>
+# [qraLm 0.1.1](https://github.com/WorldHealthOrganization/qraLm/releases/tag/v.0.1.1) <small>2024-09-30</small>
 
 - Summary functions updated
-- qraLmShiny integraded
+- WT_qraLM integraded
 
-# [qraLm 0.1.1](https://github.com/WorldHealthOrganization/qraLm/releases/tag/v.0.1.1) <small>2024-02-05</small>
-=======
-# [qraLm 0.1.0](https://github.com/WorldHealthOrganization/qraLm/releases/tag/v.0.1.0) <small>2024-09-30</small>
->>>>>>> 66308643c3f730aaa9dc68f0950913f81a56978e
+# [qraLm 0.1.0](https://github.com/WorldHealthOrganization/qraLm/releases/tag/v.0.1.0) <small>2024-02-05</small>
 
 - Quantitative risk assessment models
   - Frozen Vegetables
